# threadwise

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Makefile  README.md  docker-compose.dev.yml  docker-compose.yml  eslint.config.mjs  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  threadwise_roadmap.md
.github/: copilot-instructions.md
.husky/: pre-commit
apps/ai-agent/: .dockerignore  .gitignore  Dockerfile  agent.py  docker-compose.yml  langgraph.json  pyproject.toml  test-api.py
apps/ai-agent/src/ai_agent/: dockerfile  main.py
apps/ai-agent/tests/: __init__.py
apps/ai-agent/utils/: prompts.py  settings.py  state.py  tools.py
apps/ai_agent/: .flake8  .gitignore  Dockerfile  README.md  docker-compose.yml  langgraph.json  pyproject.toml  test-api.py
apps/ai_agent/src/ai_agent/: __init__.py  dockerfile  main.py
apps/ai_agent/src/ai_agent/services/: __init__.py  embedding_service.py  langgraph_service.py
apps/ai_agent/utils/: nodes.py  settings.py  tools.py
apps/chat-ui/: .env.local  components.json  package-lock.json  package.json  react-router.config.ts  tailwind.config.ts  tsconfig.json  vite.config.ts
apps/chat-ui/app/: globals.css  root.tsx
apps/chat-ui/app/components/: ChatInterface.tsx  ChatLayout.tsx
apps/chat-ui/app/components/thread/: ChatArea.tsx  ThreadSidebar.tsx
apps/chat-ui/app/components/thread/messages/: MarkdownText.tsx  MessageBubble.tsx  MessageInput.tsx  MessageList.tsx  ToolCalls.tsx
apps/chat-ui/app/components/ui/: button.tsx  card.tsx  textarea.tsx
apps/chat-ui/app/lib/: utils.ts
apps/chat-ui/app/providers/: ChatProvider.tsx
apps/chat-ui/app/routes/: _index.tsx
apps/chat-ui/app/types/: index.ts
apps/react-router/: Dockerfile  package.json
apps/react-router/app/: routes.ts
apps/react-router/app/components/: LandingPage.tsx  MarkdownRenderer.tsx
apps/react-router/app/routes/: home.tsx
apps/react-router/app/services/: aiAgent.ts  supabaseStorage.ts
docs/: DOCKER.md  README.md
infrastructure/supabase/: docker-compose.yml  setup-vector-store.sh  setup-vector-store.sql
scripts/: setup.sh
