[project]
name = "ai-agent"
version = "0.1.0"
description = ""
authors = [
    {name = "Ignorant View",email = "theignorant.views@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13,<4.0"
dependencies = [
    "fastapi (>=0.115.12,<0.116.0)",
    "uvicorn (>=0.34.2,<0.35.0)",
    "openai (>=1.82.0,<2.0.0)",
    "langchain (>=0.3.25,<0.4.0)",
    "supabase (>=2.15.2,<3.0.0)",
    "pydantic (>=2.11.5,<3.0.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "mypy (>=1.15.0,<2.0.0)"
]

[tool.poetry]
packages = [{include = "ai_agent", from = "src"}]

[tool.black]
line-length = 88
target-version = ['py313']

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true


[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
isort = "^6.0.1"
pytest = "^8.3.5"
watchfiles = "^1.0.5"
pre-commit = "^4.2.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
