[project]
name = "threadwise-ai-agent"
version = "0.1.0"
description = ""
authors = [
    {name = "Ignorant View",email = "theignorant.views@gmail.com"}
]
readme = "README.md"
requires-python = "<3.14,>=3.9"
dependencies = [
    "fastapi (>=0.115.12,<0.116.0)",
    "uvicorn (>=0.34.2,<0.35.0)",
    "pydantic (>=2.11.5,<3.0.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "mypy (>=1.15.0,<2.0.0)",
    "langgraph (>=0.6.6,<0.7.0)",
    "langchain-openai (>=0.3.32,<0.4.0)",
    "dotenv (>=0.9.9,<0.10.0)",
    "langgraph-cli[inmem] (>=0.3.8,<0.4.0)",
    "langchain-community (>=0.3.28,<0.4.0)",
    "psycopg2-binary (>=2.9.10,<3.0.0)",
    "python-dotenv (>=1.1.1,<2.0.0)",

]

[tool.poetry]
packages = [{include = "ai_agent", from = "src"}]

[tool.black]
line-length = 88
target-version = ['py313']

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true


[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
isort = "^6.0.1"
pytest = "^8.3.5"
watchfiles = "^1.0.5"
pre-commit = "^4.2.0"
flake8-isort = "^6.1.2"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
